# Stats-Test

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: master.yml  pr.yml
scripts/: entrypoint.sh  production_data.py
stats_core/: conftest.py  manage.py
stats_core/accounts/: apps.py  consumers.py  routing.py
stats_core/accounts/managers/: account.py
stats_core/accounts/migrations/: 0001_initial.py
stats_core/accounts/models/: account.py
stats_core/accounts/views/: account.py
stats_core/authentication/: apps.py
stats_core/authentication/serializers/: login.py
stats_core/authentication/views/: login.py
stats_core/blocks/: apps.py
stats_core/blocks/migrations/: 0001_initial.py
stats_core/blocks/models/: block.py
stats_core/blocks/serializers/: block.py
stats_core/blocks/views/: block.py
stats_core/comments/: apps.py
stats_core/comments/migrations/: 0001_initial.py
stats_core/comments/models/: comment.py
stats_core/comments/serializers/: comment.py
stats_core/comments/views/: comment.py
stats_core/config/: apps.py  models.py  serializers.py  views.py
stats_core/config/migrations/: 0001_initial.py
stats_core/core/: authentication.py  balance.py  exceptions.py
stats_core/core/utils/: cryptography.py  custom_collections.py  misc.py
stats_core/project/: asgi.py  urls.py
stats_core/project/settings/: __init__.py  base.py  custom.py  custom_logging.py  docker.py  envvars.py  rest_framework.py
stats_core/recipes/: apps.py
(+10 files in other folders)
